--- a/assets/css/radar.css
+++ b/assets/css/radar.css
@@ -101,6 +101,16 @@ li.flecha {
 	position: absolute;
 	width: 100% !important;
 }
+.background-principal{
+	background:url('../image/fondo1024x768_2.png') no-repeat;
+	background-size: 100%;
+	height: 100%;
+	left: 0 !important;
+	margin-left: 0 !important;
+	margin-top: 0 !important;
+	position: absolute !important;
+	width: 100% !important;
+}
 .background-radar-eventos-1{
 	background:url('../image/eventos-listado-1.png') no-repeat;
 	background-size: 100%;
